--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,6 +9,8 @@
 @use "./components/gamerGuy";
 @use "./components/marquee";
 @use "./components/usBox";
+@use "./components/carrousel";
 @use "./sections/hero";
 @use "./sections/us";
+@use "./sections/stock";
 
