--- a/src/scss/sections/_us.scss
+++ b/src/scss/sections/_us.scss
@@ -11,10 +11,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 clamp(0.5rem, -9.5rem + 44.444vw, 2rem);
 }
 
+.us-text-container{
+    padding: 0 clamp(0.5rem, -9.5rem + 44.444vw, 2rem);
+}
 .us-boxes-container{
     display: flex;
     flex-direction: column;
+    padding: 0 clamp(0.5rem, -9.5rem + 44.444vw, 2rem);
+}
+
+.gradient-transition{
+    height: 50svh;
+    width: 100%;
+    background: linear-gradient(0deg,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.78) 50%, rgba(0, 0, 0, 0.61) 69%, rgba(255, 255, 255, 0) 100%);
 }
